--- a/AI_APP_Predicting_Flight_Delays.ipynb
+++ b/AI_APP_Predicting_Flight_Delays.ipynb
@@ -18,8 +18,11 @@
     "# Solution: \n",
     "<b>Predicting delays to prevent loss in time or business. I used linear regression model to predict the departure delays<b>\n",
     "\n",
-    "#Recommendation\n",
-    "<b>By this model, it can be made sure that the schedules are better managed, and \n",
+    "#Risk & Benefits\n",
+    "<b>Risk: The model must accurately predict delay because one flight delay can affect the further connecting flights schedules.</b>\n"
+    "<b>Benefits: By this model, it can be made sure that the schedules are better managed, and  </b> \n"
+    
+   \n",
     "the functioning of that airport can be improved to avoid such delays.</b>\n"
    ]
   },
